# thesis-blind_navigation_system

./: README.md
HapticCompass/: local.properties
HapticCompass/app/: build.gradle
HapticCompass/app/src/androidTest/java/com/example/HapticCompass/: ExampleInstrumentedTest.java
HapticCompass/app/src/main/: AndroidManifest.xml
HapticCompass/app/src/main/java/: PolyPointObject.java
HapticCompass/app/src/main/java/com/example/HapticCompass/: App.java  CompassArrowActivity.java  DirectionsJSONParser.java  GetCompassDirActivity.java  HapticsFeedbackTask.java  MainActivity.java  TCP_Client.java
HapticCompass/app/src/main/res/layout/: activity_main.xml  compass_view.xml  input_dialog.xml
HapticCompass/app/src/main/res/mipmap-anydpi-v26/: blind_icon_round.xml  luncher_icon_round.xml
HapticCompass/app/src/main/res/values/: blind_icon_background.xml  blind_luncher_backgound.xml  strings.xml  styles.xml
HapticCompass/app/src/test/java/com/example/HapticCompass/: ExampleUnitTest.java
LaTeX_source_files/: main.tex  upatras-thesis.sty
LaTeX_source_files/chapters/: chapter1_state_of_the_art.tex  chapter2_architecture.tex  chapter3_demo.tex  chapter4_conclusion.tex  chapter5_appendix.tex  introduction.tex
LaTeX_source_files/intro/: about.tex  abstract-en.tex  abstract-gr.tex  acknowledgements.tex  certification-en.tex  certification-gr.tex  lastpage.tex  titlepage.tex
RaspPi_source_code/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
